--- a/index.html
+++ b/index.html
@@ -72,6 +72,45 @@
                 </div>
             </div>
         </div>
+        <div class="contenedor pt-4">
+            <div class="row">
+                <div class="col col-md-6">
+                    <div class="row">
+                        <h4>Cofiadulces</h4>
+                    </div>
+                    <div class="row">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur soluta asperiores voluptatum hic sint. Sed modi rem obcaecati? Beatae est veritatis maxime praesentium fugiat quidem debitis tempore voluptas provident quas?</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur soluta asperiores voluptatum hic sint. Sed modi rem obcaecati? Beatae est veritatis maxime praesentium fugiat quidem debitis tempore voluptas provident quas?</p>
+                    </div>
+                    <div class="row">
+                        <button class="btn btn-primary">Conocer mas</button>
+                    </div>
+                </div>
+                <div class="col col-md-6 p-4">
+                    <img  class="img-fluid" src="img/paisaje-1.jpg" alt="">
+
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div class="row contenedor ">
+                <div class="col">
+                    <h1>Cofiadulces</h1>
+                </div>
+                <div class="col">
+                    <a href=""><img src="img/logo-facebook.png" alt=""></a>
+                </div>
+                <div class="col">
+                    <a href=""><img src="img/logo-instagram.png" alt=""></a>
+                </div>
+                <div class="col">
+                    <a href=""><img src="img/recurso-telefono.png" alt=""></a>
+                </div>
+                <div class="col">
+                    <a href=""><img src="img/recurso-ubicacion.png" alt=""></a>
+                </div>
+            </div>
+        </footer>
  
 
 
